--- a/lang/main-enGB.json
+++ b/lang/main-enGB.json
@@ -298,7 +298,7 @@
         "answer": "Answer",
         "audioCallTitle": "Incoming call",
         "decline": "Dismiss",
-        "productLabel": "from Jitsi Meet",
+        "productLabel": "from Fiesta.app",
         "videoCallTitle": "Incoming video call"
     },
     "info": {
@@ -444,6 +444,8 @@
         "mutedTitle": "You're muted!",
         "mutedRemotelyTitle": "You have been muted by {{participantDisplayName}}!",
         "mutedRemotelyDescription": "You can always unmute when you're ready to speak. Mute back when you're done to keep noise away from the meeting.",
+        "unMutedRemotelyTitle": "You have been un muted by {{participantDisplayName}}!",
+        "unMutedRemotelyDescription": "You can always mute when you're not ready to speak.",
         "passwordRemovedRemotely": "$t(lockRoomPasswordUppercase) removed by another participant",
         "passwordSetRemotely": "$t(lockRoomPasswordUppercase) set by another participant",
         "raisedHand": "{{name}} would like to speak.",
@@ -613,6 +615,7 @@
             "videoblur": "",
             "privateMessage": "Send private message",
             "muteEveryone": "Mute everyone",
+            "unMuteEveryone": "Unmute everyone",
             "moreOptions": "Show more options",
             "help": "Help",
             "download": "Download our apps"
@@ -712,6 +715,7 @@
     },
     "videothumbnail": {
         "domute": "Mute",
+        "doUnMute": "Unmute",
         "flip": "Flip",
         "kick": "Kick out",
         "moderator": "Moderator",
