--- a/lang/main-enGB.json
+++ b/lang/main-enGB.json
@@ -663,8 +663,8 @@
         "videomute": "Start / Stop camera",
         "startvideoblur": "",
         "stopvideoblur": "",
-        "lockUnMuteGuests": "Lock self unmute",
-        "unLockUnMuteGuest": "Unlock self unmute"
+        "lockUnMuteGuests": "Lock unmute",
+        "unLockUnMuteGuest": "Unlock unmute"
     },
     "transcribing": {
         "ccButtonTooltip": "Start / Stop subtitles",
