Changed shared document to whiteboard

--- a/lang/main-id.json
+++ b/lang/main-id.json
@@ -635,8 +635,8 @@
         "callQuality": "Manage video quality",
         "chat": "Open / Close chat",
         "closeChat": "Close chat",
-        "documentClose": "Close shared document",
-        "documentOpen": "Open shared document",
+        "documentClose": "Close Whiteboard",
+        "documentOpen": "Open Whiteboard",
         "download": "Download our apps",
         "enterFullScreen": "View full screen",
         "enterTileView": "Enter tile view",
