--- a/lang/main.json
+++ b/lang/main.json
@@ -741,8 +741,8 @@
         "callQuality": "Manage video quality",
         "chat": "Open / Close chat",
         "closeChat": "Close chat",
-        "documentClose": "Close shared document",
-        "documentOpen": "Open shared document",
+        "documentClose": "Close Whiteboard",
+        "documentOpen": "Open Whiteboard",
         "download": "Download our apps",
         "e2ee": "End-to-End Encryption",
         "embedMeeting": "Embed meeting",
