Put desc to bottom of buttons

--- a/lang/main-af.json
+++ b/lang/main-af.json
@@ -234,6 +234,7 @@
         "shareVideoLinkError": "Gee asb. ’n korrekte YouTube-skakel.",
         "shareVideoTitle": "Deel ’n video",
         "shareYourScreen": "Deel u skerm",
+        "shareScreen": "Deel skerm",
         "shareYourScreenDisabled": "Skermdeling gedeaktiveer.",
         "shareYourScreenDisabledForGuest": "Gaste kan nie skerms deel nie.",
         "startLiveStreaming": "Begin regstreekse stroom",
@@ -601,6 +602,7 @@
         "profile": "Redigeer u profiel",
         "raiseHand": "Lig / laat sak u hand",
         "raiseYourHand": "",
+        "raiseYourHandText": "",
         "Settings": "Instellings",
         "sharedvideo": "Deel ’n YouTube-video",
         "shareRoom": "Nooi iemand",
