--- a/lang/main-be.json
+++ b/lang/main-be.json
@@ -265,6 +265,7 @@
         "shareVideoLinkError": "Калі ласка, падайце дакладную спасылку на YouTube.",
         "shareVideoTitle": "Падзяліцца відэа",
         "shareYourScreen": "Паказаць экран",
+        "shareScreen": "Паказаць экран",
         "shareYourScreenDisabled": "Дэманстрацыя экрана адключаная.",
         "shareYourScreenDisabledForGuest": "Госці не могуць дэманстраваць экран.",
         "startLiveStreaming": "Пачаць трансляцыю",
@@ -667,6 +668,7 @@
         "profile": "Рэдагаваць профіль",
         "raiseHand": "Хачу гаварыць",
         "raiseYourHand": "Падняць руку",
+        "raiseYourHandText": "Падняць руку",
         "Settings": "Налады",
         "sharedvideo": "Відэа YouTube",
         "shareRoom": "Адправіць запрашэнне",
