--- a/lang/main-bg.json
+++ b/lang/main-bg.json
@@ -248,6 +248,7 @@
         "shareVideoLinkError": "Моля въведете правилна връзка към YouTube.",
         "shareVideoTitle": "Сподели видео",
         "shareYourScreen": "Споделяне на екрана",
+        "shareScreen": "",
         "shareYourScreenDisabled": "Споделянето на екрана не се поддържа.",
         "shareYourScreenDisabledForGuest": "Гостите не могат да споделят екрана.",
         "startLiveStreaming": "Започване на излъчване на живо",
@@ -651,6 +652,7 @@
         "profile": "Редактиране на профила",
         "raiseHand": "Вдигане/сваляне на ръка",
         "raiseYourHand": "Поискай думата",
+        "raiseYourHandText": "Поискай думата",
         "Settings": "Настройки",
         "sharedvideo": "Пускане/спиране на споделянето на екрана",
         "shareRoom": "Добавете някого",
