--- a/lang/main-ca.json
+++ b/lang/main-ca.json
@@ -259,6 +259,7 @@
         "shareVideoLinkError": "Proporcioneu un enllaç de YouTube correcte.",
         "shareVideoTitle": "Comparteix un vídeo",
         "shareYourScreen": "Comparteix la pantalla",
+        "shareScreen": "Comparteix pantalla",
         "shareYourScreenDisabled": "S'ha inhabilitat la compartició de pantalla.",
         "shareYourScreenDisabledForGuest": "Els convidats no poden compartir la pantalla.",
         "startLiveStreaming": "Inicia la transmissió en directe",
@@ -662,6 +663,7 @@
         "profile": "Edita el perfil",
         "raiseHand": "Aixeca o abaixa la mà",
         "raiseYourHand": "Aixeca la mà",
+        "raiseYourHandText": "",
         "Settings": "Configuració",
         "sharedvideo": "Comparteix un vídeo de YouTube",
         "shareRoom": "Convida-hi algú",
