--- a/lang/main-cs.json
+++ b/lang/main-cs.json
@@ -312,6 +312,7 @@
         "shareVideoLinkError": "Zadejte prosím správný odkaz videa na YouTube.",
         "shareVideoTitle": "Sdílet obraz",
         "shareYourScreen": "Sdílet obrazovku",
+        "shareScreen": "Sdílet obrazovku",
         "shareYourScreenDisabled": "Sdílení obrazovky vypnuto.",
         "shareYourScreenDisabledForGuest": "Hosté nemohou sdílet obrazovku.",
         "startLiveStreaming": "Spustit živý přenos",
