--- a/lang/main-da.json
+++ b/lang/main-da.json
@@ -260,6 +260,7 @@
         "shareVideoLinkError": "Angiv venligst et validt Youtube link.",
         "shareVideoTitle": "Del en video",
         "shareYourScreen": "Del din skærm",
+        "shareScreen": "Del skærm",
         "shareYourScreenDisabled": "Skærmdeling er ikke slået til.",
         "shareYourScreenDisabledForGuest": "Gæster kan ikke dele deres skærm.",
         "startLiveStreaming": "Start live stream",
@@ -657,6 +658,7 @@
         "profile": "Rediger profil",
         "raiseHand": "Ræk hånden op / Tag hånden ned",
         "raiseYourHand": "Ræk hånden op",
+        "raiseYourHandText": "",
         "Settings": "Indstillinger",
         "sharedvideo": "Del en Youtube video",
         "shareRoom": "Invitér deltagere",
