--- a/lang/main-de.json
+++ b/lang/main-de.json
@@ -286,6 +286,7 @@
         "shareVideoLinkError": "Bitte einen gültigen YouTube-Link angeben.",
         "shareVideoTitle": "Video teilen",
         "shareYourScreen": "Bildschirm freigeben",
+        "shareScreen": "Bildschirm freigeben",
         "shareYourScreenDisabled": "Bildschirmfreigabe deaktiviert.",
         "shareYourScreenDisabledForGuest": "Gäste können den Bildschirm nicht freigeben.",
         "startLiveStreaming": "Livestream starten",
@@ -776,6 +777,7 @@
         "profile": "Profil bearbeiten",
         "raiseHand": "Hand erheben",
         "raiseYourHand": "Melden",
+        "raiseYourHandText": "Melden",
         "security": "Sicherheitsoptionen",
         "Settings": "Einstellungen",
         "sharedvideo": "YouTube-Video teilen",
