--- a/lang/main-el.json
+++ b/lang/main-el.json
@@ -278,6 +278,7 @@
         "shareVideoLinkError": "Παρακαλώ δώστε έναν σωστό σύνδεσμο youtube.",
         "shareVideoTitle": "Μοιραστείτε ένα βίντεο",
         "shareYourScreen": "Μοιραστείτε την οθόνη σας",
+        "shareScreen": "",
         "shareYourScreenDisabled": "Η κοινή χρήση οθόνης απενεργοποιήθηκε.",
         "shareYourScreenDisabledForGuest": "Οι επισκέπτες δεν μπορούν να μοιραστούν την οθόνη τους.",
         "startLiveStreaming": "Έναρξη ζωντανής ροής",
@@ -739,6 +740,7 @@
         "profile": "Επεξεργαστείτε το προφίλ σας",
         "raiseHand": "Σηκώστε / κατεβάστε το χέρι σας",
         "raiseYourHand": "Σηκώστε το χέρι σας",
+        "raiseYourHandText": "",
         "security": "Επιλογές ασφαλείας",
         "Settings": "Ρυθμίσεις",
         "sharedvideo": "Μοιραστείτε βίντεο στο YouTube",
