--- a/lang/main-eo.json
+++ b/lang/main-eo.json
@@ -264,6 +264,7 @@
         "shareVideoLinkError": "Bonvolu doni ĝustan ligilon de YouTube",
         "shareVideoTitle": "Kundividi videon",
         "shareYourScreen": "Kundividi vian ekranon",
+        "shareScreen": "Kundividi ekranon",
         "shareYourScreenDisabled": "Kundividado de ekrano malŝaltita.",
         "shareYourScreenDisabledForGuest": "Gastoj ne povas kundividi ekranon.",
         "startLiveStreaming": "Fini tujan elsendfluon",
@@ -675,6 +676,7 @@
         "profile": "Redakti vian profilon",
         "raiseHand": "Levi / Mallevi vian manon",
         "raiseYourHand": "Levi vian manon",
+        "raiseYourHandText": "",
         "Settings": "Agordoj",
         "sharedvideo": "Kundividi videon el YouTube",
         "shareRoom": "Inviti iun",
