--- a/lang/main-esUS.json
+++ b/lang/main-esUS.json
@@ -793,6 +793,7 @@
         "profile": "Editar perfil",
         "raiseHand": "Levantar o bajar la mano",
         "raiseYourHand": "Levantar la mano",
+        "raiseYourHandText": "",
         "security": "Opciones de seguridad",
         "Settings": "Configuración",
         "sharedvideo": "Compartir un video de YouTube",
