--- a/lang/main-et.json
+++ b/lang/main-et.json
@@ -259,6 +259,7 @@
         "shareVideoLinkError": "Sisesta korrektne Youtube’i link.",
         "shareVideoTitle": "Jaga videot",
         "shareYourScreen": "Jaga ekraani",
+        "shareScreen": "Jaga ekraani",
         "shareYourScreenDisabled": "Ekraani jagamine on keelatud.",
         "shareYourScreenDisabledForGuest": "Külalised ei saa ekraani jagada.",
         "startLiveStreaming": "Alusta otseülekannet",
@@ -656,6 +657,7 @@
         "profile": "Muuda profiili",
         "raiseHand": "Tõsta/langeta kätt",
         "raiseYourHand": "Tõsta kätt",
+        "raiseYourHandText": "",
         "Settings": "Seaded",
         "sharedvideo": "Jaga YouTube’i videot",
         "shareRoom": "Kutsu",
