--- a/lang/main-eu.json
+++ b/lang/main-eu.json
@@ -260,7 +260,8 @@
         "Share": "Partekatu",
         "shareVideoLinkError": "Eman YouTube esteka zuzena.",
         "shareVideoTitle": "Partekatu bideoa",
-        "shareYourScreen": "Partekatu zure pantaila",
+        "shareYourScreen": "Partekatu pantaila",
+        "shareScreen": "Partekatu pantaila",
         "shareYourScreenDisabled": "Pantaila-partekatzea desgaituta.",
         "shareYourScreenDisabledForGuest": "Gonbidatuek ezin dute pantaila partekatu.",
         "startLiveStreaming": "Hasi zuzeneko erreprodukzioa",
@@ -702,6 +703,7 @@
         "profile": "Editatu zure profila",
         "raiseHand": "Altxa / jaitsi eskua",
         "raiseYourHand": "Altxatu eskua",
+        "raiseYourHandText": "Altxatu eskua",
         "Settings": "Ezarpenak",
         "sharedvideo": "Partekatu YouTube bideoa",
         "shareRoom": "Gonbidatu norbait",
