--- a/lang/main-fi.json
+++ b/lang/main-fi.json
@@ -234,6 +234,7 @@
         "shareVideoLinkError": "Anna oikea YouTube-linkki.",
         "shareVideoTitle": "Jaa video",
         "shareYourScreen": "Jaa näyttö",
+        "shareScreen": "Jaa näyttö",
         "shareYourScreenDisabled": "Näytönjako ei ole käytössä.",
         "shareYourScreenDisabledForGuest": "Vieraat eivät voi jakaa näyttöä.",
         "startLiveStreaming": "Aloita suoratoisto",
@@ -601,6 +602,7 @@
         "profile": "Muokkaa profiilia",
         "raiseHand": "Nosta/laske käsi",
         "raiseYourHand": "Nosta käsi",
+        "raiseYourHandText": "Nosta käsi",
         "Settings": "Asetukset",
         "sharedvideo": "Jaa YouTube-video",
         "shareRoom": "Kutsu joku",
