--- a/lang/main-frCA.json
+++ b/lang/main-frCA.json
@@ -244,6 +244,7 @@
         "shareVideoLinkError": "Veuillez fournir un lien YouTube correct.",
         "shareVideoTitle": "Partager une vidéo",
         "shareYourScreen": "Partager votre écran",
+        "shareScreen": "Partagez écran",
         "shareYourScreenDisabled": "Le partage d'écran est désactivé.",
         "shareYourScreenDisabledForGuest": "Les invités ne peuvent pas partager leur écran.",
         "startLiveStreaming": "Démarrer la diffusion en direct",
@@ -633,6 +634,7 @@
         "profile": "Modifier votre profil",
         "raiseHand": "Lever / Abaisser votre main",
         "raiseYourHand": "Lever votre main",
+        "raiseYourHandText": "Lever main",
         "Settings": "Paramètres",
         "sharedvideo": "Partager une vidéo YouTube",
         "shareRoom": "Inviter quelqu'un",
