--- a/lang/main-gl.json
+++ b/lang/main-gl.json
@@ -249,6 +249,7 @@
         "shareVideoLinkError": "Forneza unha ligazón de YouTube correcta.",
         "shareVideoTitle": "Compartir un vídeo",
         "shareYourScreen": "Compartir a súa pantalla",
+        "shareScreen": "Compartir pantalla",
         "shareYourScreenDisabled": "Compartición de pantalla desactivada.",
         "shareYourScreenDisabledForGuest": "Os convidados non poden compartir a pantalla.",
         "startLiveStreaming": "Comezar a difusión ao vivo",
@@ -640,6 +641,7 @@
         "profile": "Editar o seu perfil",
         "raiseHand": "Levantar / Baixar a man",
         "raiseYourHand": "Levantar a súa man",
+        "raiseYourHandText": "Levantar a súa man",
         "Settings": "Configuración",
         "sharedvideo": "Compartir un vídeo de YouTube",
         "shareRoom": "Convidar a alguén",
