--- a/lang/main-he.json
+++ b/lang/main-he.json
@@ -260,6 +260,7 @@
         "shareVideoLinkError": "אנא ספק קישור תקין ליוטיוב.",
         "shareVideoTitle": "שתף וידאו",
         "shareYourScreen": "שתף את המסך שלך",
+        "shareScreen": "",
         "shareYourScreenDisabled": "שיתוף מסך כבוי.",
         "shareYourScreenDisabledForGuest": "אורח אינו יכול לשתף מסך.",
         "startLiveStreaming": "התחל שידור חי",
@@ -666,6 +667,7 @@
 		"privateMessage": "שלח הודעה פרטית",
         "raiseHand": "הרם / הורד את היד",
         "raiseYourHand": "הרם את היד",
+        "raiseYourHandText": "",
         "Settings": "הגדרות",
         "sharedvideo": "שתף וידאו מיוטיוב",
         "shareRoom": "הזמן מישהו",
