--- a/lang/main-hr.json
+++ b/lang/main-hr.json
@@ -239,6 +239,7 @@
         "shareVideoLinkError": "Unesite točnu vezu na youtube.",
         "shareVideoTitle": "Dijelite videozapis",
         "shareYourScreen": "Dijelite vaš ekran",
+        "shareScreen": "",
         "shareYourScreenDisabled": "Dijeljenje ekrana je isključeno.",
         "shareYourScreenDisabledForGuest": "",
         "startLiveStreaming": "Pokreni emitiranje uživo",
@@ -606,6 +607,7 @@
         "profile": "",
         "raiseHand": "Podigni / spusti ruku",
         "raiseYourHand": "Podigni ruku",
+        "raiseYourHandText": "Podigni ruku",
         "Settings": "Postavke",
         "sharedvideo": "Podijeli YouTube videozapis",
         "shareRoom": "Pozovi nekoga",
