--- a/lang/main-hu.json
+++ b/lang/main-hu.json
@@ -249,6 +249,7 @@
         "shareVideoLinkError": "Adjon meg egy helyes YouTube linket.",
         "shareVideoTitle": "Videó megosztása",
         "shareYourScreen": "Képernyő megosztása",
+        "shareScreen": "",
         "shareYourScreenDisabled": "Képernyőmegosztás letiltva.",
         "shareYourScreenDisabledForGuest": "Vendég nem végezhet képernyőmegosztást.",
         "startLiveStreaming": "Élő közvetítés kezdése",
@@ -652,6 +653,7 @@
         "profile": "Adja meg a profilját",
         "raiseHand": "Kéz felemelése / leengedése",
         "raiseYourHand": "Kéz felemelése",
+        "raiseYourHandText": "",
         "Settings": "Beállítások",
         "sharedvideo": "YouTube videó megosztása",
         "shareRoom": "Valaki meghívása",
