--- a/lang/main-hy.json
+++ b/lang/main-hy.json
@@ -229,6 +229,7 @@
         "shareVideoLinkError": "Խնդրում ենք ներկայացնել ճիշտ Youtube հղում:",
         "shareVideoTitle": "Տարածել տեսանյութը",
         "shareYourScreen": "",
+        "shareScreen": "",
         "shareYourScreenDisabled": "",
         "shareYourScreenDisabledForGuest": "",
         "startLiveStreaming": "Կանգնացնել ուղիղ հեռարձակումը:",
@@ -596,6 +597,7 @@
         "profile": "Փոփոխել տվյալները",
         "raiseHand": "Բարձրացնել/իջեցնել ձեռքը",
         "raiseYourHand": "",
+        "raiseYourHandText": "",
         "Settings": "Կարգավորումներ",
         "sharedvideo": "Տարածել Youtube Video-ն",
         "shareRoom": "",
