--- a/lang/main-is.json
+++ b/lang/main-is.json
@@ -260,6 +260,7 @@
         "shareVideoLinkError": "Settu inn réttan YouTube-tengil.",
         "shareVideoTitle": "Deila myndmerki",
         "shareYourScreen": "Deila skjánum þínum",
+        "shareScreen": "",
         "shareYourScreenDisabled": "Skjádeiling er óvirk.",
         "shareYourScreenDisabledForGuest": "Gestir geta ekki notað skjádeilingu.",
         "startLiveStreaming": "Hefja beint streymi",
@@ -662,6 +663,7 @@
         "profile": "Breyta persónusniðinu þínu",
         "raiseHand": "Rétta upp / Leggja niður hönd",
         "raiseYourHand": "Rétta upp höndina",
+        "raiseYourHandText": "Rétta höndina",
         "Settings": "Stillingar",
         "sharedvideo": "Deila YouTube-myndskeiði",
         "shareRoom": "Bjóddu einhverjum",
