--- a/lang/main-it.json
+++ b/lang/main-it.json
@@ -284,6 +284,7 @@
         "shareVideoLinkError": "Fornire un link youtube corretto.",
         "shareVideoTitle": "Condividi un video",
         "shareYourScreen": "Condividi schermo",
+        "shareScreen": "",
         "shareYourScreenDisabled": "Condivisione schermo disabilitata.",
         "startLiveStreaming": "Inizia una diretta",
         "startRecording": "Inizia a registrare",
