--- a/lang/main-kab.json
+++ b/lang/main-kab.json
@@ -259,6 +259,7 @@
         "shareVideoLinkError": "Ttxil-k·m mudd-d aseɣwen n Youtube ameɣtu.",
         "shareVideoTitle": "Bḍu tavidyut",
         "shareYourScreen": "Bḍut agdil-ik·im",
+        "shareScreen": "",
         "shareYourScreenDisabled": "Beṭṭu n ugdil yensa.",
         "shareYourScreenDisabledForGuest": "Inebgawen ur zmiren ara ad bḍun agdil.",
         "startLiveStreaming": "Bdu asuddem usrid",
@@ -677,6 +678,7 @@
         "profile": "Ẓreg amaɣnu-ik",
         "raiseHand": "Sali / Ṣubb afus-ik·im",
         "raiseYourHand": "Rfed afus-ik·im",
+        "raiseYourHandText": "",
         "Settings": "Iɣewwaren",
         "sharedvideo": "Bḍu tavidyut n Youtube",
         "shareRoom": "",
