--- a/lang/main-lt.json
+++ b/lang/main-lt.json
@@ -259,6 +259,7 @@
         "shareVideoLinkError": "Prašome pateikti teisinga Youtube adresą.",
         "shareVideoTitle": "Dalintis video",
         "shareYourScreen": "Dalintis ekrano vaizdu",
+        "shareScreen": "",
         "shareYourScreenDisabled": "Ekrano dalinimasis negalimas.",
         "shareYourScreenDisabledForGuest": "Svečiai negali dalintis ekrano vaizdu.",
         "startLiveStreaming": "Pradėti tiesioginę transliaciją",
@@ -657,6 +658,7 @@
         "profile": "Redaguoti profilį",
         "raiseHand": "Pakelti / Nuleisti ranką",
         "raiseYourHand": "Pakelti ranką",
+        "raiseYourHandText": "Pakelti ranką",
         "Settings": "Nustatymai",
         "sharedvideo": "Pasidalinkite Youtube video",
         "shareRoom": "Pakviesti ką nors",
