--- a/lang/main-lv.json
+++ b/lang/main-lv.json
@@ -254,6 +254,7 @@
         "shareVideoLinkError": "Lūdzu, norādiet derīgu Youtube saiti.",
         "shareVideoTitle": "Kopīgot video",
         "shareYourScreen": "Kopīgot ekrānu",
+        "shareScreen": "Kopīgot ekrānu",
         "shareYourScreenDisabled": "Ekrāna kopīgošana izslēgta",
         "shareYourScreenDisabledForGuest": "Viesiem nav ļauts kopīgot ekrānu",
         "startLiveStreaming": "Sākt tiešraidi",
@@ -650,6 +651,7 @@
         "profile": "Rediģēt profilu",
         "raiseHand": "Vēlos runāt (pacelt/nolaist roku)",
         "raiseYourHand": "Pacelt roku",
+        "raiseYourHandText": "Pacelt roku",
         "Settings": "Iestatījumi",
         "sharedvideo": "Sākt kopīgot YouTube video",
         "shareRoom": "Nosūtīt uzaicinājumu",
