--- a/lang/main-mn.json
+++ b/lang/main-mn.json
@@ -259,6 +259,7 @@
         "shareVideoLinkError": "YouTube-ийн зөв линк оруулна уу.",
         "shareVideoTitle": "Видео хуваалцах",
         "shareYourScreen": "Дэлгэцээ хуваалцах",
+        "shareScreen": "",
         "shareYourScreenDisabled": "Дэлгэц хуваалцах идэвхгүй",
         "shareYourScreenDisabledForGuest": "Зочид дэлгэц хуваалцах боломжгүй.",
         "startLiveStreaming": "Шууд дамжуулалтыг эхлүүл",
@@ -656,6 +657,7 @@
         "profile": "Профайлаа засна уу",
         "raiseHand": "Гараа өргөх/болих",
         "raiseYourHand": "Гараа өргө",
+        "raiseYourHandText": "Гараа өргө",
         "Settings": "Тохиргоо",
         "sharedvideo": "YouTube-н видео хуваалцах",
         "shareRoom": "Хэн нэгнийг урих",
