--- a/lang/main-mr.json
+++ b/lang/main-mr.json
@@ -262,6 +262,7 @@
         "shareVideoLinkError": "कृपया योग्य YouTube दुवा प्रदान करा.",
         "shareVideoTitle": "एक व्हिडिओ सामायिक करा",
         "shareYourScreen": "आपली स्क्रीन सामायिक करा",
+        "shareScreen": "",
         "shareYourScreenDisabled": "स्क्रीन सामायिकरण अक्षम केले.",
         "shareYourScreenDisabledForGuest": "अतिथी स्क्रीन सामायिकरण करू शकत नाहीत.",
         "startLiveStreaming": "थेट प्रवाह सुरू करा",
@@ -663,6 +664,7 @@
 "profile": "आपले प्रोफाइल संपादित करा",
 "raiseHand": "हात वर करा / कमी करा",
 "raiseYourHand": "तुझा हात वर कर",
+"raiseYourHandText": "",
 "Settings": "सेटिंग्ज",
 "sharedvideo": "एक YouTube व्हिडिओ सामायिक करा",
 "shareRoom": "एखाद्यास आमंत्रित करा",
