--- a/lang/main-nb.json
+++ b/lang/main-nb.json
@@ -226,6 +226,7 @@
         "shareVideoLinkError": "",
         "shareVideoTitle": "Del en video",
         "shareYourScreen": "Del skjermen din",
+        "shareScreen": "",
         "shareYourScreenDisabled": "Skjermdeling er avskrudd.",
         "shareYourScreenDisabledForGuest": "",
         "startLiveStreaming": "",
@@ -601,6 +602,7 @@
         "profile": "",
         "raiseHand": "",
         "raiseYourHand": "",
+        "raiseYourHandText": "",
         "Settings": "",
         "sharedvideo": "",
         "shareRoom": "",
