--- a/lang/main-pl.json
+++ b/lang/main-pl.json
@@ -284,6 +284,7 @@
         "shareVideoLinkError": "Podaj proszę prawidłowy link youtube.",
         "shareVideoTitle": "Udostępnij wideo",
         "shareYourScreen": "Włącz udostępnianie ekranu",
+        "shareScreen": "",
         "shareYourScreenDisabled": "Udostępnianie ekranu wyłączone.",
         "shareYourScreenDisabledForGuest": "Goście nie mogą współdzielić ekranu.",
         "startLiveStreaming": "Rozpocznij transmisję na żywo",
@@ -754,6 +755,7 @@
         "profile": "Edytuj swój profil",
         "raiseHand": "Podnieś / Opuść rękę",
         "raiseYourHand": "Podnieś rękę",
+        "raiseYourHandText": "Podnieś rękę",
         "security": "Opcje zabezpieczeń",
         "Settings": "Ustawienia",
         "sharedvideo": "Udostępnij wideo z Youtube",
