--- a/lang/main-pt.json
+++ b/lang/main-pt.json
@@ -244,6 +244,7 @@
         "shareVideoLinkError": "Por favor, forneça um link do youtube correto.",
         "shareVideoTitle": "Compartilhar um vídeo",
         "shareYourScreen": "Compartilhar sua tela",
+        "shareScreen": "Compartilhar tela",
         "shareYourScreenDisabled": "Compartilhamento de tela desativada.",
         "shareYourScreenDisabledForGuest": "Visitantes não podem compartilhar tela.",
         "startLiveStreaming": "Iniciar transmissão ao vivo",
@@ -633,6 +634,7 @@
         "profile": "Editar seu perfil",
         "raiseHand": "Erguer / Baixar sua mão",
         "raiseYourHand": "Levantar a mão",
+        "raiseYourHandText": "Levantar",
         "Settings": "Configurações",
         "sharedvideo": "Compartilhar um vídeo do YouTube",
         "shareRoom": "Convidar alguém",
