--- a/lang/main-ro.json
+++ b/lang/main-ro.json
@@ -247,6 +247,7 @@
         "shareVideoLinkError": "Vă rugam să furnizați un link You Tube corect.",
         "shareVideoTitle": "Partajare video",
         "shareYourScreen": "Partajare ecran",
+        "shareScreen": "Partajare ecran",
         "shareYourScreenDisabled": "Partajare ecran dezactivată.",
         "shareYourScreenDisabledForGuest": "Invitații nu pot partaja ecranul.",
         "startLiveStreaming": "Inițiere trasmitere live",
@@ -644,6 +645,7 @@
         "profile": "Editați profilul",
         "raiseHand": "Ridicați / Coborâți mâna",
         "raiseYourHand": "Ridicați mâna",
+        "raiseYourHandText": "",
         "Settings": "Setări",
         "sharedvideo": "Partajați un video YouTube",
         "shareRoom": "Adăugați persoane",
