--- a/lang/main-sc.json
+++ b/lang/main-sc.json
@@ -259,6 +259,7 @@
         "shareVideoLinkError": "Fruni unu ligàmene de youtube curretu.",
         "shareVideoTitle": "Cumpartzi unu vìdeu",
         "shareYourScreen": "Cumpartzi s'ischermu",
+        "shareScreen": "",
         "shareYourScreenDisabled": "Cumpartzidura de ischermu disativada.",
         "shareYourScreenDisabledForGuest": "Is persones invitadas non podent cumpartzire s'ischermu.",
         "startLiveStreaming": "Avia sa trasmissione in direta",
@@ -661,6 +662,7 @@
         "profile": "Modìfica su profilu",
         "raiseHand": "Àrtzia o abassa sa manu",
         "raiseYourHand": "Àrtzia sa manu",
+        "raiseYourHandText": "",
         "Settings": "Cunfiguratzione",
         "sharedvideo": "Cumpartzi unu vìdeu de YouTube",
         "shareRoom": "Invita una persone",
