--- a/lang/main-sk.json
+++ b/lang/main-sk.json
@@ -283,6 +283,7 @@
         "shareVideoLinkError": "Prosím, zadajte správny Youtube odkaz.",
         "shareVideoTitle": "Zdieľať video",
         "shareYourScreen": "Zdielať obrazovku",
+        "shareScreen": "Zdielať obrazovku",
         "shareYourScreenDisabled": "Zdieľanie obrazovky vypnuté.",
         "shareYourScreenDisabledForGuest": "Hostia nemôžu zdielať obrazovku.",
         "startLiveStreaming": "Spustiť živý prenos",
@@ -746,6 +747,7 @@
         "profile": "Úprava profilu",
         "raiseHand": "Prihlásiť / Odhlásiť sa o slovo",
         "raiseYourHand": "Prihlásiť sa o slovo",
+        "raiseYourHandText": "",
         "security": "Nastavenie zabezpečenia",
         "Settings": "Nastavenia",
         "sharedvideo": "Zdielať YouTube video",
