--- a/lang/main-sl.json
+++ b/lang/main-sl.json
@@ -271,6 +271,7 @@
         "shareVideoLinkError": "Prosimo, vnesite pravilno Youtube povezavo.",
         "shareVideoTitle": "Delite video",
         "shareYourScreen": "Delite vaš zaslon",
+        "shareScreen": "Delite zaslon",
         "shareYourScreenDisabled": "Deljenje zaslona je onemogočeno.",
         "shareYourScreenDisabledForGuest": "Gostje ne morejo deliti zaslona.",
         "startLiveStreaming": "Začni prenos v živo",
@@ -722,6 +723,7 @@
         "profile": "Uredi svoj profil",
         "raiseHand": "Dvigni / spusti svojo roko",
         "raiseYourHand": "Dvigni svojo roko",
+        "raiseYourHandText": "",
         "shareRoom": "Povabi nekoga",
         "sharedvideo": "Deli YouTube video",
         "shortcuts": "Prikaži bližnjice",
