--- a/lang/main-sr.json
+++ b/lang/main-sr.json
@@ -245,6 +245,7 @@
     "shareVideoLinkError": "Унeситe тачну вeзу на YouTube.",
     "shareVideoTitle": "Дијeлитe видeозапис",
     "shareYourScreen": "Дијeлитe ваш eкран",
+    "shareScreen": "Дијeлитe eкран",
     "shareYourScreenDisabled": "Дијeљeњe eкрана јe искључeно.",
     "shareYourScreenDisabledForGuest": "",
     "startLiveStreaming": "Покрeни eмитовање уживо",
@@ -654,6 +655,7 @@
     "profile": "Профил",
     "raiseHand": "Подигни / спусти руку",
     "raiseYourHand": "Подигни руку",
+    "raiseYourHandText": "Подигни руку",
     "Settings": "Подешавања",
     "sharedvideo": "Подијeли YouTube видeозапис",
     "shareRoom": "Позови нeкога",
