--- a/lang/main-sv.json
+++ b/lang/main-sv.json
@@ -245,6 +245,7 @@
         "shareVideoLinkError": "Skriv in en fungerande YouTube-länk.",
         "shareVideoTitle": "Ta bort en delad video",
         "shareYourScreen": "Dela din skärm",
+        "shareScreen": "Dela skärm",
         "shareYourScreenDisabled": "Skärmdelning har inaktiverats.",
         "shareYourScreenDisabledForGuest": "Gäster kan inte skärmdela.",
         "startLiveStreaming": "Starta livesändning",
@@ -642,6 +643,7 @@
         "profile": "Redigera din profil",
         "raiseHand": "Räck upp / ta ner din hand",
         "raiseYourHand": "Räck upp handen",
+        "raiseYourHandText": "Räck upp handen",
         "Settings": "Inställningar",
         "sharedvideo": "Dela en YouTube-video",
         "shareRoom": "Bjud in någon",
