--- a/lang/main-tr.json
+++ b/lang/main-tr.json
@@ -271,6 +271,7 @@
         "shareVideoLinkError": "Lütfen doğru bir Youtube bağlantısı sağlayın.",
         "shareVideoTitle": "Bir video paylaş",
         "shareYourScreen": "Ekranınızı paylaşın",
+        "shareScreen": "Ekranınızı paylaşın",
         "shareYourScreenDisabled": "Ekran paylaşımı devre dışı.",
         "shareYourScreenDisabledForGuest": "Konuklar ekran paylaşımı yapamaz.",
         "startLiveStreaming": "Canlı akışı başlat",
@@ -734,6 +735,7 @@
         "profile": "Profilinizi düzenleyin",
         "raiseHand": "Elinizi kaldırın/indirin",
         "raiseYourHand": "Elinizi kaldırın",
+        "raiseYourHandText": "Elinizi kaldırın",
         "Settings": "Ayarlar",
         "sharedvideo": "Bir Youtube videosu paylaş",
         "shareRoom": "Birini davet et",
