--- a/lang/main-uk.json
+++ b/lang/main-uk.json
@@ -267,6 +267,7 @@
         "shareVideoLinkError": "Будь ласка, зазначте правильне посилання в Youtube.",
         "shareVideoTitle": "Поділитися відео",
         "shareYourScreen": "Демонстрація екрану",
+        "shareScreen": "Демонстрація екрану",
         "shareYourScreenDisabled": "Доступ до екрану вимкнено.",
         "shareYourScreenDisabledForGuest": "Гості не можуть демонструвати свій екран",
         "startLiveStreaming": "Почати трансляцію",
@@ -673,6 +674,7 @@
         "profile": "Редагувати профіль",
         "raiseHand": "Бажаю говорити",
         "raiseYourHand": "Підняти руку",
+        "raiseYourHandText": "Підняти руку",
         "Settings": "Налаштування",
         "sharedvideo": "Поділитися відео",
         "shareRoom": "Надіслати запрошення",
