--- a/lang/main-vi.json
+++ b/lang/main-vi.json
@@ -234,6 +234,7 @@
         "shareVideoLinkError": "Vui lòng cung cấp liên kết youtube chính xác.",
         "shareVideoTitle": "Chia sẻ video",
         "shareYourScreen": "Chia sẻ màn hình của bạn",
+        "shareScreen": "",
         "shareYourScreenDisabled": "Chia sẻ màn hình đã tắt.",
         "shareYourScreenDisabledForGuest": "Khách không thể chia sẻ màn hình.",
         "startLiveStreaming": "Bắt đầu phát trực tuyến",
@@ -601,6 +602,7 @@
         "profile": "Chỉnh sửa hồ sơ cá nhân",
         "raiseHand": "Giơ / Hạ tay",
         "raiseYourHand": "Giơ tay",
+        "raiseYourHandText": "Giơ tay",
         "Settings": "Cài đặt",
         "sharedvideo": "Chia sẻ YouTube video",
         "shareRoom": "Mời ai đó",
