--- a/lang/main-zhCN.json
+++ b/lang/main-zhCN.json
@@ -282,6 +282,7 @@
         "shareVideoLinkError": "请提供正确的youtube链接。",
         "shareVideoTitle": "分享视频",
         "shareYourScreen": "共享你的屏幕",
+        "shareScreen": "共享你的屏幕",
         "shareYourScreenDisabled": "禁止共享屏幕。",
         "shareYourScreenDisabledForGuest": "访客无法共享屏幕。",
         "startLiveStreaming": "开始直播",
