--- a/lang/main-zhTW.json
+++ b/lang/main-zhTW.json
@@ -249,6 +249,7 @@
         "shareVideoLinkError": "請提供正確的 YouTube 連結。",
         "shareVideoTitle": "分享影像",
         "shareYourScreen": "分享自己的螢幕",
+        "shareScreen": "分享自己的螢幕",
         "shareYourScreenDisabled": "螢幕分享已停用。",
         "shareYourScreenDisabledForGuest": "訪客無法螢幕分享。",
         "startLiveStreaming": "啟動直播串流",
@@ -652,6 +653,7 @@
         "profile": "編輯您的簡介",
         "raiseHand": "舉手/取消 請求發言",
         "raiseYourHand": "舉手發言",
+        "raiseYourHandText": "",
         "Settings": "設定",
         "sharedvideo": "分享 YouTube 影片",
         "shareRoom": "邀請某人",
