--- a/lang/main-ko.json
+++ b/lang/main-ko.json
@@ -267,6 +267,7 @@
         "shareVideoLinkError": "올바른 YouTube 링크를 제공하십시오",
         "shareVideoTitle": "비디오 공유",
         "shareYourScreen": "화면공유",
+        "shareScreen": "",
         "shareYourScreenDisabled": "화면 공유가 비활성화 되었습니다.",
         "shareYourScreenDisabledForGuest": "게스트는 화면을 공유 할 수 없습니다.",
         "startLiveStreaming": "라이브 스트리밍 시작",
@@ -646,6 +647,7 @@
         "profile": "프로필 수정",
         "raiseHand": "말하기 요청/해제",
         "raiseYourHand": "손 들어주세요",
+        "raiseYourHandText": "손 들어주세요",
         "Settings": "설정",
         "sharedvideo": "YouTube 비디오 공유",
         "shareRoom": "초대하기",
