--- a/lang/main-nl.json
+++ b/lang/main-nl.json
@@ -281,6 +281,7 @@
         "shareVideoLinkError": "Geef een juiste YouTube-link op",
         "shareVideoTitle": "Een video delen",
         "shareYourScreen": "Uw scherm delen",
+        "shareScreen": "",
         "shareYourScreenDisabled": "Schermdeling is uitgeschakeld.",
         "shareYourScreenDisabledForGuest": "Gasten kunnen hun scherm niet delen.",
         "startLiveStreaming": "Livestream starten",
@@ -743,6 +744,7 @@
         "profile": "Uw profiel bewerken",
         "raiseHand": "Uw hand opsteken / laten zakken",
         "raiseYourHand": "Uw hand opsteken",
+        "raiseYourHandText": "",
         "security": "Beveiligingsoptions",
         "Settings": "Instellingen",
         "sharedvideo": "Een YouTube-video delen",
