--- a/lang/main-ptBR.json
+++ b/lang/main-ptBR.json
@@ -286,6 +286,7 @@
         "shareVideoLinkError": "Por favor, forneça um link do youtube correto.",
         "shareVideoTitle": "Compartilhar um vídeo",
         "shareYourScreen": "Compartilhar sua tela",
+        "shareScreen": "Compartilhar tela",
         "shareYourScreenDisabled": "Compartilhamento de tela desativada.",
         "shareYourScreenDisabledForGuest": "Visitantes não podem compartilhar tela.",
         "startLiveStreaming": "Iniciar transmissão ao vivo",
