--- a/lang/main.json
+++ b/lang/main.json
@@ -284,6 +284,7 @@
         "shareVideoLinkError": "Please provide a correct youtube link.",
         "shareVideoTitle": "Share a video",
         "shareYourScreen": "Share your screen",
+        "shareScreen": "Share screen",
         "shareYourScreenDisabled": "Screen sharing disabled.",
         "startLiveStreaming": "Start live stream",
         "startRecording": "Start recording",
@@ -775,6 +776,7 @@
         "profile": "Edit your profile",
         "raiseHand": "Raise / Lower your hand",
         "raiseYourHand": "Raise your hand",
+        "raiseYourHandText": "Raise hand",
         "security": "Security options",
         "Settings": "Settings",
         "sharedvideo": "Share a YouTube video",
